         playlist format).
NEW    : Ticket #1155, "After Playback" enhancements:
         - each "After Playback" action can now be associated to a keyboard shortcut.
         - an OSD message is shown when an "After Playback" action is selected.
NEW    : Ticket #1627, Open the file's directory from the clip properties
        (by double clicking on it)
CHANGED: Updated Belarusian, Chinese (simplified and traditional), Czech, Dutch,
         French, German, Hebrew, Hungarian, Japanese, Polish, Russian, Slovakian
         and Ukrainian translations
CHANGED: Updated libogg to v1.3.0
CHANGED: Updated SoundTouch to v1.6.1pre r131
CHANGED: Updated VirtualDub to v1.10.1-test16
CHANGED: Updated MediaInfoLib to v0.7.52
CHANGED: Updated ZenLib to v0.4.23
CHANGED: Updated Little CMS to v2.3
CHANGED: Updated libpng to v1.5.7
CHANGED: Updated ffmpeg
FIXED  : If "Play # time(s)" was set to a value higher than one and if the playlist
         had more than one element, the playback never stopped.
FIXED  : If the playlist had only invalid elements, the player would try to
         open the last element forever. If at least one element was invalid,
         the "Play # time(s)" setting would be ignored and the playlist would
         be repeated forever.
FIXED  : Ticket #19, AviSplitter: fixed detection of absolute chunk addressing
FIXED  : Ticket #53/#1666, [OGG] splitter fails for latest Theora videos
FIXED  : Ticket #285, Ambarella AVC not correctly splitted by MPC-HC's internal
         MP4/MOV source filter
FIXED  : Ticket #311, High dpi awareness
FIXED  : Ticket #970, "Always load external subtitles" fails if the subtitles
         filename contains LANG postfix
FIXED  : Ticket #1166, Playlist was erased by pressing the "Close" (default Ctrl+C)
FIXED  : Ticket #1427, Add the ability to use different mouse button bindings
         in windowed and fullscreen modes
FIXED  : Ticket #1467, "Save Image" was sometimes skipping some frames